Switch to markdown for README

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "live",
     "hot-reload"
   ],
-  "homepage": "https://github.com/dvvc/game-sandbox#README.org",
+  "homepage": "https://github.com/dvvc/game-sandbox#README.md",
   "author": {
     "name": "David Villegas",
     "email": "dville00@gmail.com"
